--- a/translator.html
+++ b/translator.html
@@ -5,7 +5,6 @@
         <title>BibTeX Upload</title>>
         <link rel="stylesheet" href="style.css" />
         <script src="reverseMappingTable.js" type="text/javascript"></script>
-        <script src="bibtex-processing.js" type="text/javascript"></script>
         <script src="acl-bibtex-translate.js" type="text/javascript"></script>
         <script src="https://cdn.jsdelivr.net/npm/pako@1.0.11/dist/pako.min.js" type="text/javascript"></script>
         <script src="https://cdn.jsdelivr.net/npm/bibtex-parse-js@0.0.24/bibtexParse.min.js" type="text/javascript"></script>
@@ -19,5 +18,6 @@
         <button id="do-conversion-button" onclick="convert()" disabled>Convert!</button>
 
         <div id="results-area"></div>
+        <button id="download-button" onclick="download()" disabled>Download results</button>
     </body>
 </html>
