--- a/translator.html
+++ b/translator.html
@@ -10,6 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bibtex-parse-js@0.0.24/bibtexParse.min.js" type="text/javascript"></script>
         <script src="https://cdn.jsdelivr.net/npm/diff@4.0.2/dist/diff.min.js" integrity="sha256-xofEpXTFTnsOK+GIsjgJc1ZN0kSE3KsTtZJ2GQaWs3I=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/xregexp@3.2.0/xregexp-all.min.js" type="text/javascript"></script>
+        <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
     </head>
     <body>
         <span id="no-js">Please enable Javascript!</span>
