--- a/bibfix.html
+++ b/bibfix.html
@@ -58,6 +58,9 @@
                     <div id="results-area"></div>
                     <button class="download-button btn btn-success" style="display: none;" onclick="download()">Download results</button>
                     <div class="clearfix"></div>
+                    <div id="feedback">
+                        Feedback encouraged: <code>guy.aglionby@cl.cam...</code>
+                    </div>
                 </div>
             </div>
         </div>
