--- a/bibfix.html
+++ b/bibfix.html
@@ -32,6 +32,10 @@
                         <div class="alert alert-danger" id="no-js" role="alert">
                             <h2 id="no-jss" class="text-danger">Please enable Javascript!</span>
                         </div>
+                        <div class="alert alert-danger d-block d-sm-none" role="alert">
+                            <h3>Not tested on mobile!</h3>
+                            This hasn't been tested on mobile, so might not work.
+                        </div>
                         <p>
                             This tool fixes incomplete *CL BibTeX entries to ensure that papers are correctly cited as their published version.
                             This covers papers downloaded from arXiv, Google Scholar, Semantic Scholar, and the like which may not contain the full citation as stored in the <a href="https://www.aclweb.org/anthology/" taret="_blank">ACL Anthology</a>. 
