--- a/bibfix.html
+++ b/bibfix.html
@@ -38,7 +38,7 @@
                         </div>
                         <p>
                             This tool fixes incomplete *CL BibTeX entries to ensure that papers are correctly cited as their published version.
-                            This covers papers downloaded from arXiv, Google Scholar, Semantic Scholar, and the like which may not contain the full citation as stored in the <a href="https://www.aclweb.org/anthology/" taret="_blank">ACL Anthology</a>. 
+                            This covers papers downloaded from arXiv, Google Scholar, Semantic Scholar, and the like which may not contain the full citation as stored in the <a href="https://www.aclweb.org/anthology/" target="_blank">ACL Anthology</a>. 
                         </p>
                         <p>
                             <b>Usage:</b> upload your .bib file below, or <a href="#" onclick="downloadSample()">try with a sample file</a>. You can accept or reject all changes to each entry using the buttons on the right, or reject changes to individual fields by clicking on them. Once you're done, download the fixed .bib (includes all unchanged entries). There may be a little lag while loading files, especially if they are large. 
